# Bancolombia1006-Extractos

./: .gitignore  README.md  pyproject.toml
Entregable/: CreacionDatosDummy.txt  CreacionTablas.txt  Link Repositorio de github.txt
extractos/: db.sqbpro  db.sqlite3  manage.py
extractos/cuenta/: models.py  urls.py  views.py
extractos/cuenta/migrations/: 0001_initial.py
extractos/extractos/: asgi.py  settings.py  urls.py  wsgi.py
extractos/movimiento/: apps.py  models.py  urls.py  views.py
extractos/movimiento/migrations/: 0001_initial.py  0002_alter_movimiento_fecha_remove_movimiento_n_cuenta_and_more.py
extractos/movimiento/static/styles/: s1.css
extractos/movimiento/templates/: extracto.html  generate_extracto.html
extractos/movimiento/utils/: constant.py
extractos/usuario/: forms.py  models.py  urls.py  views.py
extractos/usuario/migrations/: 0001_initial.py
extractos/usuario/static/styles/: s1.css
extractos/usuario/templates/: validar_usuario.html
extractos/usuario/templates/layouts/: base.html
